# time-tracker-plugin-pomodoro

./: .gitignore  Cargo.toml  plugin.toml
.github/workflows/: build.yml
frontend/: README.md  package-lock.json  package.json  vite.config.ts
frontend/src/: index.ts  types.ts
frontend/src/components/: PomodoroWidget.tsx
frontend/src/components/Pomodoro/: PomodoroTransitionModal.tsx
src/: lib.rs
