[package]
name = "time-tracker-pomodoro-plugin"
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true
description = "Pomodoro plugin for Time Tracker"

[lib]
crate-type = ["cdylib"]

[dependencies]
# SDK dependency - use git until published to crates.io
# For local development in monorepo, use: time-tracker-plugin-sdk = { path = "../../plugin-sdk" }
time-tracker-plugin-sdk = { git = "https://github.com/bthos/time-tracker-app", tag = "plugin-sdk-v0.2.7" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
